cilium/dev/talos/kube-system/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  labels:
    app: hubble
spec:
  parentRefs:
    - name: cilium
      namespace: kube-system
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - hubble.localhost
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
          group: ""
          kind: Service
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
